# holographic-qc

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Repository Structure Verification.bash  Structure.txt  Verification Run.bash  pyproject.toml  requirements.txt  setup.py  virasoro.py
cognition/: __init__.py  cognitive_architecture.py  continual_learning.py  global_workspace.py  goal_system.py  integrated_information.py  self_model.py  spiking_networks.py  symbolic_reasoning.py  vector_memory.py
csharp/: HolographicQC.sln
csharp/HolographicQC/: HolographicQC.csproj  Program.cs  makefile.txt
docs/: api_reference.md  benchmarks.md  derivations.md  theory.md
examples/: Expected Outputs.txt  cognitive_demo.py  full_pipeline.py
holographic_qc/: __init__.py
holographic_qc/algorithms/: __init__.py  grover.py  qft.py  shor.py  vqe.py
holographic_qc/core/: __init__.py  ads_cft.py  christoffel.py  dilaton.py  ryu_takayanagi.py
holographic_qc/materials/: __init__.py  bi2se3.py  hgte.py  trapped_ions.py
holographic_qc/ml/: __init__.py  pytorch_models.py  tensorflow_models.py  training.py
notebooks/: 01_virasoro_algebra.py  02_holographic_protection.py  03_shor_algorithm.py  04_grover_algorithm.py  05_materials_benchmarks.py
scripts/: benchmark_platforms.py  generate_dataset.py  run_all_notebooks.py  train_decoherence_tf.py  train_decoherence_torch.py  validate_physics.py
tests/: __init__.py  conftest.py  test_ads_cft.py  test_christoffel.py  test_decoherence.py  test_dilaton.py  test_grover.py  test_materials.py  test_shor.py  test_virasoro.py  test_vqe.py
(+19 files in other folders)
