[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "holographic-qc"
version = "0.1.0"
description = "Holographic quantum computing: AdS3/CFT2 for decoherence suppression"
authors = [{name = "Ahmed Ali", email = "ahmed19999520@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy>=1.12",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tqdm>=4.65",
    "h5py>=3.8",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
tf = ["tensorflow>=2.12"]
torch = ["torch>=2.0"]
qiskit = ["qiskit>=0.44", "qiskit-aer>=0.12"]
all = ["tensorflow>=2.12", "torch>=2.0", "qiskit>=0.44", "qiskit-aer>=0.12"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=23", "isort>=5.12", "mypy>=1.4"]

[project.scripts]
hqc-generate-data = "scripts.generate_dataset:main"
hqc-benchmark = "scripts.benchmark_platforms:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true